--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,4 +1,12 @@
 extends layout/main
 
 block content
-    editProfile
+    .form-container
+        form(action=routes.editProfile, method="post")
+            .fileUpload
+                label(for="avatar") Avatar
+                input(type="file" id="avatar", name="avatar")
+            input(type="text", placeholder="Name" name="name")
+            input(type="email", placeholder="Email" name="email")
+            input(type="submit", value="Update Profile")
+        a.form-container__link(href=routes.changePassword) Change Password
