--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -1,4 +1,10 @@
 extends layout/main
 
 block content
-    p editVideo
+    .form-container
+        form(action=routes.editVideo(video.id),method="post")
+            input(type="text",placeholder="Title", name="title", value=video.title)
+            textarea(name="description", placeholder="Description")=video.description
+            input(type="submit", value="Update Video")
+        a.form-container__link.from-container__link--delete(href=routes.deleteVideo(video.id)) Delete Video
+            button Delete Video
