--- a/views/home.pug
+++ b/views/home.pug
@@ -1,4 +1,26 @@
 extends layout/main
+include mixins/videoBlock
 
 block content
-    p Hello
+    .home-videos
+        each item in videos
+            +videoBlock({
+                id: item.id,
+                title: item.title,
+                views: item.views,
+                videoFile: item.fileUrl
+             })
+            +videoBlock({
+                id: item.id,
+                title: item.title,
+                views: item.views,
+                videoFile: item.fileUrl
+             })
+            +videoBlock({
+                id: item.id,
+                title: item.title,
+                views: item.views,
+                videoFile: item.fileUrl
+             })
+            
+        
