--- a/views/join.pug
+++ b/views/join.pug
@@ -1,4 +1,11 @@
 extends layout/main
 
 block content
-    p join
+    .form-container
+        form(action=routes.join, method="post")
+            input(type="text", name="name", placeholder="name", required=true)
+            input(type="email", name="email", placeholder="Email" required=true)
+            input(type="password", name="password", placeholder="Password" required=true)
+            input(type="password", name="password2", placeholder="Verify Password" required=true)
+            input(type="submit", value="Join Now")
+        include partial/socialLogin
