--- a/views/layout/main.pug
+++ b/views/layout/main.pug
@@ -3,8 +3,10 @@ html
     head
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.8.1/css/all.css",integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf",crossorigin="anonymous")
         title #{pageTitle} | #{siteName}
+        link(rel="stylesheet",href="/static/styles.css")
     body
         include ../partial/header
         main
             block content
         include ../partial/footer
+        script(src="/static/main.js")
