--- a/views/login.pug
+++ b/views/login.pug
@@ -1,4 +1,9 @@
 extends layout/main
 
 block content
-    p login
+    .form-container
+        form(action=routes.login, method="post")
+            input(type="email",name="email",placeholder="Email", required=true)
+            input(type="password", name="password",placeholder="Password", required=true)
+            input(type="submit", value="Log In")
+        include partial/socialLogin
