--- a/views/search.pug
+++ b/views/search.pug
@@ -1,4 +1,17 @@
 extends layout/main
+include mixins/videoBlock
 
 block content
-    p search
+    .search_header
+        h3 Searching for #{searchingBy}
+    .search__videos
+        if videos.length===0
+            h5 No Videos Found
+        each item in videos
+            +videoBlock({
+                title: item.title,
+                views: item.views,
+                videoFile: item.videoFile,
+                id:item.id
+            })
+    
