--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,4 +1,11 @@
 extends layout/main
 
 block content
-    p upload
+    .form-container 
+        form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
+            div.fileUpload
+                label(for="file") Video File
+                input(type="file", name="videoFile" id="file", required=true, accept="video/*")
+            input(type="text" placeholder="title" name="title")
+            textarea(name="description", placeholder="Description")
+            input(type="submit", value="Upload Video")
